made some smaller changes to report + added section 'problems'

--- a/report/references.bib
+++ b/report/references.bib
@@ -67,3 +67,27 @@ DOI = {10.2312/vmv.20141280}
   year={2009},
   organization={IEEE}
 }
+
+@inproceedings{censi13dvsd_sub,
+        author = "Censi, Andrea and Scaramuzza, Davide",
+        kind = "preprint",
+        title = "Low-latency Event-Based Visual Odometry",
+        url = "http://purl.org/censi/2013/dvsd",
+        booktitle = "IEEE International Conference on Robotics and Automation (ICRA)",
+        month = "May",
+        slides = "http://purl.org/censi/research/2013-dvsd/201405-icra15-dvsd.pdf",
+        year = "2014",
+        pdf = "http://purl.org/censi/research/2013-dvsd-final.pdf",
+        abstract = ""
+}
+    
+@INPROCEEDINGS{censi13led, 
+	author={Censi, A. and Strubel, J. and Brandli, C. and Delbruck, T. and Scaramuzza, D.}, 
+	booktitle={Intelligent Robots and Systems (IROS), 2013 IEEE/RSJ International Conference on}, 
+	title={Low-latency localization by active LED markers tracking using a dynamic vision sensor}, 
+	year={2013}, 
+	month={Nov}, 
+	pages={891-898}, 
+	doi={10.1109/IROS.2013.6696456}, 
+	ISSN={2153-0858},
+}
