--- a/report/sections/tracking.tex
+++ b/report/sections/tracking.tex
@@ -26,7 +26,7 @@ falls below some threshold (usally $N/2$ as in \cite{kim2014simultaneous}).
 Resampling is done by copying particles with probability equal to their weight
 into a new set.
 
-\subsubsection{on the matter of prior positions and accuracy}
+\subsubsection{On the Matter of Prior Positions and Accuracy}
 
 A particle filter is a nice way of keeping track of multiple hypotheses as
 might conceivably occur when updating on a single event: An event might match
