--- a/report/sections/core_algorithm.tex
+++ b/report/sections/core_algorithm.tex
@@ -8,8 +8,6 @@ the other one is correct.
 
 We assume a static scene, so every event (every change in brightness) is caused
 by camera rotation or is due to noise.
-
-Further, we only track camera rotation; We assume there is no translation at
-all and therefore no parallax displacment either. This greatyl simplifies our
+Further, we only track camera rotation: We assume there is no translation at
+all and therefore no parallax displacement either. This greatly simplifies our
 algorithm as we only have to keep track of a two dimensional map.
-
