--- a/report/sections/our_work.tex
+++ b/report/sections/our_work.tex
@@ -1,41 +1,30 @@
-The goal of this project is to implement full rotational tracking and scene
-reconstruction using only a DVS. We implemented an approach described in Kim et
-al. in \cite{kim2014simultaneous} using Matlab. It uses a SLAM-like two-step
+The goal of this project was to implement full rotational tracking and scene
+reconstruction using only a DVS. We implemented an approach described by Kim \etal
+in \cite{kim2014simultaneous} using Matlab. It uses a SLAM-like two-step
 algorithm, where the position and the map are jointly estimated and is
 described in Section \ref{sec:core_algorithm}.
 
-In contrast to \cite{kim2014simultaneous} we're working with some
-simplifications: The particle filter for the tracking directly usese Euler
+In contrast to \cite{kim2014simultaneous} we are working with some
+simplifications: The particle filter for the tracking directly uses Euler
 angles and corner cases like gimbal lock are not handled.
+As we discovered during the implementation, the runtime of the algorithm is
+extremely long when implemented in Matlab. The events that are created by the
+camera during only a few seconds could easily lead to hours of computation.
+To be still able to test the algorithm we exclusively used data generated with
+our simulation instead of the real camera.
+This enabled us to control the number of events by tweaking parameters of our
+virtual camera.
+A further benefit of this approach was the existence of an exact ground truth
+for the camera motion which simplified the evaluation of the algorithm greatly.
 
-To speed up things up, we assume that the camera's initial field
+To speed things up, we assume that the camera's initial field
 of view is already known and included in the map. With this assumption we do
 not have to deal with a special initialization procedure and can immediately
 start with the standard iteration while being relatively sure that the camera
 movement is tracked correctly.
-
 This is not an unreasonable assumption, as newer DVS models incorporate the
 ability to take full-frame pictures and there's a simple method for generating
 full images which works with any model (see Section \ref{sec:shutter_removal}).
 
 
-
-
-
-Explain basic algo, more details in Section 5: 'core algorithm'.
-
-
--some simplifications\\
-    -use particle filter directly with euler angles (ignore corner cases)\\
-    -start with first fov in map\\
-
-
-
-
-
-// TODO - insert section to explain what we did here
-
-general goal, how to achieve this
-
--implemented paper (kim) in matlab\\
-
+// TODO: Explain basic algo, more details in Section 5: 'core algorithm'.
