added section title for section conclusion

--- a/report/report.tex
+++ b/report/report.tex
@@ -112,6 +112,10 @@ ETH Zurich\\
 \label{sec:results}
 \input{sections/results.tex}
 
+\section{Conclusion and Future Work}
+\label{sec:conclusion}
+// TODO
+
 
 %-------------------------------------------------------------------------
 {\small
