Add ground truth tracking graph to report.

--- a/report/report.tex
+++ b/report/report.tex
@@ -116,8 +116,8 @@ ETH Zurich\\
 \label{sec:conclusion}
 // TODO
 
-
-%-------------------------------------------------------------------------
+%%%%%%%%% CITATIONS
+-------------------------------------------------------------------------
 {\small
 \bibliographystyle{ieee}
 \bibliography{references}
