Small changes in report and code docu.

--- a/report/report.tex
+++ b/report/report.tex
@@ -113,8 +113,8 @@ ETH Zurich\\
 \input{sections/results.tex}
 
 \section{Conclusion and Future Work}
+\input{sections/conclusion.tex}
 \label{sec:conclusion}
-// TODO
 
 %%%%%%%%% CITATIONS
 -------------------------------------------------------------------------
