added tracking error during reconstruction plot to results

--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -5,6 +5,14 @@ TODO: write some text here. Conclusion and stuff.
 - using Matlab for more than just a few hacked scripts: bad idea
 
 \begin{figure}
+\includegraphics[width=\linewidth]{images/Tracking_error_during_reconstruction.eps}
+\label{fig:tracking_error_reconstruction}
+\caption{The tracking error (red) in comparison to the total travelled distance (green)
+while reconstructing the map.
+}
+\end{figure}
+
+\begin{figure}
 \includegraphics[width=\columnwidth]{images/zigzag_input.png}
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
 \caption{A part of the input scene (top) and its reconstruction,
