Fix small typos and such in report.

--- a/report/sections/dvs.tex
+++ b/report/sections/dvs.tex
@@ -6,7 +6,7 @@ happens for each pixel completely independent from all the others.
 
 A DVS has several advantages compared to standard cameras. Since there is no
 need to gather data from all pixels to generate an image, events can be sent
-with an extremely low latency of $15 \mu s$ or less \cite{lpd08dvs, brandli14davis},
+with an extremely low latency of $15 \mu s$ or less \cite{lpd08dvs, brandli14davis} and
 with microsecond timestamps.  For the same reason, there is practically no
 motion blur in the DVS signal.  Another benefit of independent pixels is the
 very high dynamic range.  Saturation, blooming or smearing as observed when a
@@ -24,5 +24,5 @@ resolution of $128 \times 128$ or $240 \times 180$ pixels, respectively. This
 obviously limits the spacial accuracy of the sensed data, but it is likely to
 be a simple matter of time until sensors with a higher resolution are
 developed. A more important point is that the computer vision algorithms that
-have been developed during the last decades can either not be used at all or
+have been developed during the last decades either cannot be used at all or
 have to be adapted to the new data representation.
