--- a/report/sections/related_work.tex
+++ b/report/sections/related_work.tex
@@ -1,13 +1,14 @@
-Computer Vision using Dynamic Vision Sensors is a very young field since
-the sensors have only been around for a few years \cite{lpd08dvs, brandli14davis}.
-While the problem of visual odometry and visual SLAM has been known for many years
-and many approaches have been proposed, the work by Kim \etal \cite{kim2014simultaneous},
-which is the basis of our work, is, to our best knowledge, the first approach to the problem
-using only a DVS with no additional information.
-It has, however, already been shown that the precision of a visual odometry system using
-a standard camera can be increased by adding a DVS,
-especially during fast turns when the standard camera suffers from motion blur \cite{censi13dvsd_sub}.
-Additionally, DVS's have been shown to outperform standard cameras at pose tracking during high-speed maneuvers
-when used in sufficiently equipped environments \cite{mueggler2014event}.
-Other research with DVS's focuses in great parts on tracking moving objects
-with a static camera \cite{vmv.20141280, conradt2009embedded, censi13led}.
+Computer vision using dynamic vision sensors is a very young field since the
+sensors have only been around for a few years \cite{lpd08dvs, brandli14davis}.
+While the problem of visual odometry and visual SLAM has been known for many
+years and many approaches have been proposed, the work by Kim \etal
+\cite{kim2014simultaneous}, which is the basis of our work, is, to our best
+knowledge, the first approach to the problem using only a DVS with no
+additional information.  It has, however, already been shown that the precision
+of a visual odometry system using a standard camera can be increased by adding
+a DVS, especially during fast turns when the standard camera suffers from
+motion blur \cite{censi13dvsd_sub}.  Additionally, DVS's have been shown to
+outperform standard cameras at pose tracking during high-speed maneuvers when
+used in sufficiently equipped environments \cite{mueggler2014event}.  Other
+research with DVS's focuses in great parts on tracking moving objects with a
+static camera \cite{vmv.20141280, conradt2009embedded, censi13led}.
