--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -4,10 +4,10 @@ completely independent of each other and instantaneously reports changes in
 sensed intensity.
 Such a sensor provides much lower data bandwith, very high dynamic range and
 extremely low latencies and is therefore very appealing for a wide range of
-applications. However, due to the different [and differential] nature of the
-data, standard computer vision algorithms cannot be used directly.
+applications. However, due to the different nature of the data, standard
+computer vision algorithms cannot be used directly.
 In this report, we further investigate the approach proposed by Kim et al in
 \cite{kim2014simultaneous}: DVS events are used to track the rotational pose of
 a camera while simultaneously reconstructing a panoramic map of the
 environment. Our work shows the general feasibility of this approach, but
-suffers from a very long runtime.
+suffers from slow performance.
