--- a/report/sections/experiments.tex
+++ b/report/sections/experiments.tex
@@ -9,7 +9,7 @@ There are a few things we looked into with the real DVS tough:
 \label{sec:shutter_removal}
 If the DVS is fully covered by a shutter we can recover a full picture by
 simply removing it slowly and integrating all the events generated. This allows
-for an easy initialization of the map using only the DVS. An example is shown in Figure \ref{fig:shutter_integration}
+for an easy initialization of the map using only a basic DVS. An example is shown in figure \ref{fig:shutter_integration}.
 
 \begin{figure}
 \includegraphics[width=\linewidth]{images/PCLab_integrated.png}
@@ -22,11 +22,11 @@ for an easy initialization of the map using only the DVS. An example is shown in
 \label{sec:camera_calibration}
 As with any sensor, we must calibrate the DVS to get usable data. For normal
 cameras, this is usally done by capturing images of a checkerboard pattern from
-different viewpoints and subsequently rectifying images so they fit into a
+different viewpoints and subsequent rectification so captured images fit into a
 standard pinhole camera model.
 
-Unfortunately, the dynamic vision sensor only detects changes and cannot
-directly capture a calibration pattern. We could take pictures as described in
+Unfortunately, the dynamic vision sensor only detects changes and is therefore unable to
+capture a static calibration pattern. We could take pictures as described in
 the previous section, but for calibration there is an even better method \cite{mueggler2014event}: Use a
 computer screen to quickly show and hide the pattern. This is not only quicker
 and more convenient than removing a shutter, it also has the advantage of only
@@ -37,6 +37,6 @@ of lines with varying sizes.
 
 \begin{figure}
 \includegraphics[width=\linewidth]{images/checkerboard_integrated.png}
-\caption{a sample checkerboard pattern used for calibration}
+\caption{sample checkerboard pattern used for calibration}
 \label{fig:calibration}
 \end{figure}
