--- a/report/sections/scene_reconstruction.tex
+++ b/report/sections/scene_reconstruction.tex
@@ -1,8 +1,8 @@
-We use Kalman Filters to reconstruct a gradient map from the noisy DVS signal.
+We use Kalman filters to reconstruct a gradient map from the noisy DVS signal.
 These gradients are then used to generate a grayscale image by applying a
 poisson reconstruction algorithm \cite{raskarpoisson}. For each pixel in the
-output image there is a Kalman Filter that keeps track of the color gradient at
-the pixel's position. The input to the Kalman Filter is the event frequency on
+output image there is a Kalman filter that keeps track of the intensity gradient at
+the pixel's position. The input to the Kalman filter is the event frequency
 along the current movement. Here we assumed that the pixel's
 movement was constant since the last event it triggered. While this is
 obviously not true all the time, it is a good approximation due to the high
@@ -13,12 +13,12 @@ The pixel movement is computed with the same formulas as used in the
 simulation and the map lookup during tracking. Given a camera orientation, the
 orientation of the ray through the pixel and the camera's focal point is
 computed. This is then mapped to a pixel in the output image. While we use the
-exact position in the output image to compute the pixel movement,  we do not,
-however, interpolate between several pixels when writing the signal to the map,
+exact position in the output image to compute the pixel movement,  we do not
+however interpolate between several pixels when writing the signal to the map,
 but simply round the position in the output image to the closest pixel. Since
-we do not write the signal directly but use Kalman Filters to reduce the noise,
+we do not write the signal directly but use Kalman filters to reduce the noise,
 this simplification greatly reduces the complexity of the algorithm compared to
 dividing the signals between several filters.
 
-The exact formulas used for the Kalman Filters can be seen in
+The exact formulas used for the Kalman filters can be seen in
 \cite{kim2014simultaneous}.
