--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,7 +1,7 @@
-The evaluation of the algorithms performance was mainly done qualitatively.
+The evaluation of the algorithm's performance was mainly done qualitatively.
 For short camera trajectories the quality of the reconstruction was quite good.
-For longer trajectories, however, the error tends to accumulate over time and the
-probability to completely loose track of the motion increases.
+For longer trajectories however, the error tends to accumulate over time and the
+probability of completely loosing track of the motion increases.
 This is understandable since the tracking on a noisy map introduces more noise
 in the movement which in turn leads to even more noise in the newly reconstructed
 part of the map.
@@ -15,19 +15,19 @@ Reconstructing the scene with ground truth data for the camera orientations can 
 with even higher resolution than the input image. An example for the isolated reconstruction results
 is shown in figure \ref{fig:reconstruction_only}.
 In our experiments, tracking the camera motion with the input image as map consistently lead to a deviation
-of the estimate to the ground truth of less than 1 pixel (figure \ref{fig:tracking_groundtruth}). The estimated track is, however, oscillating heavily
-the ground truth what could lead to some noise in the reconstruction. We tried to tackle
+of the estimate to the ground truth of less than 1 pixel (figure \ref{fig:tracking_groundtruth}). The estimated track however is heavily oscillating
+around ground truth which could lead to some noise in the reconstruction. We tried to tackle
 this problem by using low-pass filters on the estimated positions, but did not manage to
 adapt the parameters in a way to receive completely satisfying results.
 
-Our additional experiments produced quite promising results.
-By removing a shutter in front of the camera and simply integrating the events,
+Alas, our additional experiments produced quite promising results.
+By removing a shutter from the front of the camera and simply integrating the events,
 an image is produced that is easily identifiable as the recorded scene (figure \ref{fig:shutter_integration}).
-It is, however, quite noisy and obviously suffers from the low resolution of the sensor.
+It is however quite noisy and obviously suffers from the low resolution of the sensor.
 We are still confident that the resulting image could be filtered in such a way that
-a sufficiently clear image for the tracking can be received.
+a sufficiently clear image to initialize tracking can be recovered.
 The images generated for calibration were also noisy (figure \ref{fig:calibration}), but could easily be used
-for calibration with the Matlab camera calibration app without further filtering.
+for calibration with the Matlab camera calibration toolbox without further processing.
 
 \begin{figure}
 \includegraphics[width=\linewidth]{images/PCLab_integrated.png}
@@ -43,16 +43,16 @@ for calibration with the Matlab camera calibration app without further filtering
 
 \begin{figure}
 \includegraphics[width=\linewidth]{images/Tracking_error_during_reconstruction.eps}
-\label{fig:tracking_error_reconstruction}
 \caption{The tracking error (red) in comparison to the total travelled distance (green)
 while reconstructing the map.
 }
+\label{fig:tracking_error_reconstruction}
 \end{figure}
 
 \begin{figure}
 \includegraphics[width=\linewidth]{images/simulation_reconstruction.jpg}
-\label{fig:reconstruction_only}
 \caption{Reconstruction of the scene with ground truth data for the camera positions.}
+\label{fig:reconstruction_only}
 \end{figure}
 
 \begin{figure}
