fixed some typos

--- a/report/sections/conclusion.tex
+++ b/report/sections/conclusion.tex
@@ -1,8 +1,8 @@
 A dynamic vision sensor is a feasible option for rotational motion tracking. With
-some optimizations the system is conceiveably real-time capable - especially
+some optimizations the system is conceivably real-time capable - especially
 when combined with other sensors such as an IMU. This might even lead to full
 3D-SLAM with a dynamic vision sensor.
 
 From our point of view, the next important points are parameter tuning, runtime
-optimization and the usage of a more sophisticated motion model (eg. constant
+optimization and the usage of a more sophisticated motion model (e.g. constant
 velocity or acceleration).
