--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -11,8 +11,8 @@ decrease with difficult, and especially changing illumination conditions. This
 leads to the situation that, in many cases, a lot of processing power is
 required to extract the relevant information or, in a worst case, no relevant
 information can be extracted at all.  There is a new type of digital camera
-which overcomes these limitations by closely mimicing a biological retina: A so
+which overcomes these limitations by closely mimicking a biological retina: A so
 called Dynamic Vision Sensor (DVS), which only outputs changes in the sensed
 image independently for each pixel.  In this report, we investigate how such a
 camera can be used for basic visual SLAM.  This work is heavily based on
-\cite{kim2014simultaneous} and essentialy shares the same general structure.
+\cite{kim2014simultaneous} and essentially shares the same general structure.
