--- a/report/sections/our_work.tex
+++ b/report/sections/our_work.tex
@@ -13,7 +13,7 @@ extremely long when implemented in Matlab. The events that are created by the
 camera in only a few seconds can easily lead to hours of computation.
 
 To still be able to test the algorithm and in order to facilitate development
-we implemented and exlusively used a full DVS simulator that generates events
+we implemented and exclusively used a full DVS simulator that generates events
 from a spherical panorama.  This allows us to develop and test each part of the
 algorithm independently with perfect input data and ground truth. It also makes
 experimentation easier and faster as everything can be inspected at will and we can
