--- a/report/sections/related_work.tex
+++ b/report/sections/related_work.tex
@@ -1,5 +1,5 @@
 Computer vision using dynamic vision sensors is a very young field since the
-sensors have only been around for a few years \cite{lpd08dvs, brandli14davis}.
+sensors have only been around for a few years \cite{brandli14davis, lpd08dvs}.
 While the problem of visual odometry and visual SLAM has been known for many
 years and many approaches have been proposed, the work by Kim \etal
 \cite{kim2014simultaneous}, which is the basis of our work, is, to our best
@@ -11,4 +11,4 @@ motion blur \cite{censi13dvsd_sub}.  Additionally, DVS's have been shown to
 outperform standard cameras at pose tracking during high-speed maneuvers when
 used in sufficiently equipped environments \cite{mueggler2014event}.  Other
 research with DVS's focuses in great parts on tracking moving objects with a
-static camera \cite{vmv.20141280, conradt2009embedded, censi13led}.
+static camera \cite{censi13led, conradt2009embedded, vmv.20141280}.
