--- a/report/sections/tracking.tex
+++ b/report/sections/tracking.tex
@@ -16,12 +16,12 @@ lot earlier than the previous event). We then sample our map (which we get from 
 reconstruction part and which we assume is essentially correct) at this earlier
 position. This intensity is then compared with the intensities at all the
 proposed current positions: The closer the intensity difference to the
-intensity threshold that generates an event, the liklier is the new position
+intensity threshold that generates an event, the likelier is the new position
 and the more weight this particle gets.
 
 Finally, the particles are resampled whenever the effective number of particles
 (one over sum of squared weights, see \cite{kim2014simultaneous} for details)
-falls below some threshold (usally $N/2$ as in \cite{kim2014simultaneous}).
+falls below some threshold (usually $N/2$ as in \cite{kim2014simultaneous}).
 Resampling is done by copying particles with probability equal to their weight
 into a new set.
 
