Add short note about who did what.

--- a/report/sections/our_work.tex
+++ b/report/sections/our_work.tex
@@ -29,3 +29,9 @@ This is not an unreasonable assumption, as newer DVS models incorporate the
 ability to take full-frame pictures and there's a simple method for generating
 full images which works with any hardware model (see section
 \ref{sec:shutter_removal}).
+
+As for the work distribution in our group: we implemented everything ourselves
+(apart from the poisson image reconstruction from image gradients which we took
+from \cite{raskarpoisson}). Most of the code was developed jointly, with Marcel
+Geppert focusing on the image reconstruction part and Samuel Bryner on the
+tracking part.
